# SentinelAI

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
sentinel/: auth.py  cli.py  main.py  paths.py
sentinel/core/: agent.py  audit.py  cognitive.py  config.py  llm.py  registry.py  scheduler.py  schema.py  setup.py  ui.py
sentinel/scripts/: factory_reset.bat  wipe_vector.bat
sentinel/tools/: apps.py  audio.py  browser.py  calendar_ops.py  clock.py  context.py  desktop.py  email_ops.py  factory.py  file_ops.py  flights.py  gmail_auth.py  indexer.py  installer.py  macros.py  memory_ops.py  navigation.py  notes.py  office.py  organizer.py  smart_index.py  sql_index.py  system_ops.py  vision.py  weather_ops.py
sentinel_ai_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
